# robinwater

./: .gitignore  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-03-29-export-ideas.md  2026-04-09-connection-rendering-perf.md  2026-04-09-semantic-zoom.md  2026-04-10-synthesis-wildcard-suggestions.md  2026-04-11-canvas-descriptions.md  2026-04-11-canvas-sharing.md
docs/superpowers/specs/: 2026-03-29-export-ideas-design.md  2026-04-10-synthesis-wildcard-suggestions-design.md  (+1 more)
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AiControlsBar.tsx  Background.tsx  Canvas.tsx  CanvasList.tsx  ConnectingLine.tsx  ConnectionLines.tsx  ContextMenu.tsx  GhostNodeCard.tsx  GhostOffScreenBanner.tsx  IdeaNode.tsx  InputBox.tsx  MonoliteImportModal.tsx  MultiSelectToolbar.tsx  NodeHoverPreview.tsx  Particles.tsx  RightSidebar.tsx  SearchOverlay.tsx  SettingsModal.tsx  ShortcutsOverlay.tsx  SimilarityCanvas.tsx  SimilarityLines.tsx  UpdateModal.tsx  ZoomIndicator.tsx
src/store/: useStore.ts
src/styles/: global.css
src/utils/: aiTags.ts  claude.ts  config.ts  export.test.ts  export.ts  ghostPlacement.ts  ghostSuggestions.ts  keywords.ts  monoliteFile.test.ts  monoliteFile.ts  placement.ts  questionGeneration.ts  similarity.ts  triggerAutoTag.ts  triggerQuestions.ts  triggerSuggest.ts  updater.ts  viewportCulling.test.ts  viewportCulling.ts  zoom.ts
(+8 files in other folders)
